Fix index.html and css files for Boxes alignment and responsiveness

--- a/css/laptop.css
+++ b/css/laptop.css
@@ -1,6 +1,6 @@
 #banner h1{font-size:34px}
-.feature-box{width:45%; margin-right:2%}
-.feature-box:nth-child(3n){margin-right:0}
+.feature-box { width: 45%; margin-right: 2%; }
+.feature-box:nth-child(2n) { margin-right: 0; }
 .card{width:48%}
 .card:nth-child(odd){margin-right:2%}
 .profile{width:35%}
